--- a/view/frontend/templates/component/headline.phtml
+++ b/view/frontend/templates/component/headline.phtml
@@ -10,15 +10,14 @@ $componentClasses = $block->getSkipSpacing() ? ' cs-headline--skip-spacing' : ''
 $componentClasses .= ' ' . $block->getVar('headline/additional_css_classes');
 ?>
 
-<div <?= $visibility ? 'class="' . $visibility . '"' : ''; ?>>
-    <div class="cs-container cs-container--headline">
-        <div class="cs-container__inner">
-            <div class="cs-headline<?= $componentClasses ?>">
-                <<?=$tag?> class="cs-headline__title"><?= $viewModel->getTitle() ?></<?=$tag?>>
-                <?php if ($viewModel->getSubtitle()): ?>
-                    <p class="cs-headline__subtitle"><?= $viewModel->getSubtitle() ?></p>
-                <?php endif; ?>
-            </div>
+<div class="cs-container cs-container--headline<?= $visibility ? ' ' .$visibility : ''; ?>">
+    <div class="cs-container__inner">
+        <div class="cs-headline<?= $componentClasses ?>">
+            <<?=$tag?> class="cs-headline__title"><?= $viewModel->getTitle() ?></<?=$tag?>>
+            <?php if ($viewModel->getSubtitle()): ?>
+                <p class="cs-headline__subtitle"><?= $viewModel->getSubtitle() ?></p>
+            <?php endif; ?>
         </div>
     </div>
 </div>
+
