--- a/view/frontend/templates/component/static_block.phtml
+++ b/view/frontend/templates/component/static_block.phtml
@@ -8,12 +8,10 @@ $visibility = $block->getVisibilityClass();
 $resetStyles = $viewModel->getData('resetstyles');
 ?>
 
-<div <?= $visibility ? 'class="' . $visibility . '"' : ''; ?>>
-    <div class="cs-container cs-container--static-block">
-        <div class="cs-container__inner">
-            <div class="<?php if (!$resetStyles): ?>cs-static-cms-block<?php endif; ?> cs-cms-block <?php if ($resetStyles): ?>cs-static-cms-block-resetstyles<?php endif; ?> <?=$block->getVar('static_block/additional_css_classes');?>">
-                <?=$viewModel->getContent()?>
-            </div>
+<div class="cs-container cs-container--static-block<?= $visibility ? ' ' .$visibility : ''; ?>">
+    <div class="cs-container__inner">
+        <div class="<?php if (!$resetStyles): ?>cs-static-cms-block<?php endif; ?> cs-cms-block <?php if ($resetStyles): ?>cs-static-cms-block-resetstyles<?php endif; ?> <?=$block->getVar('static_block/additional_css_classes');?>">
+            <?=$viewModel->getContent()?>
         </div>
     </div>
 </div>
