--- a/view/frontend/templates/component/paragraph.phtml
+++ b/view/frontend/templates/component/paragraph.phtml
@@ -12,12 +12,10 @@ $componentClasses .= ' ' . $block->getVar('paragraph/additional_css_classes');
 
 <?= $block->getCssOnce('css/paragraph.css'); ?>
 
-<div <?= $visibility ? 'class="' . $visibility . '"' : ''; ?>>
-    <div class="cs-container cs-container--paragraph">
-        <div class="cs-container__inner">
-            <div class="cs-paragraph cs-paragraph--cols-<?=$viewModel->getColumns()?> cs-paragraph--mode-<?=$componentConfiguration['scenarios']['reading']['id'] ?? ''?><?= $componentClasses ?> | cs-cms-block" data-mage-init='{ "ccParagraph": {} }'>
-                <?=$viewModel->getContent()?>
-            </div>
+<div class="cs-container cs-container--paragraph<?= $visibility ? ' ' .$visibility : ''; ?>">
+    <div class="cs-container__inner">
+        <div class="cs-paragraph cs-paragraph--cols-<?=$viewModel->getColumns()?> cs-paragraph--mode-<?=$componentConfiguration['scenarios']['reading']['id'] ?? ''?><?= $componentClasses ?> | cs-cms-block" data-mage-init='{ "ccParagraph": {} }'>
+            <?=$viewModel->getContent()?>
         </div>
     </div>
 </div>
