--- a/view/frontend/templates/component/product_carousel.phtml
+++ b/view/frontend/templates/component/product_carousel.phtml
@@ -19,54 +19,52 @@ $jsSettings = json_encode($block->getVar('product_carousel/js') ?: '{}');
 
 <?= $block->getCssOnce('css/products-carousel.css'); ?>
 
-<div <?= $visibility ? 'class="' . $visibility . '"' : ''; ?>>
-    <div class="cs-container cs-container--products-carousel">
-        <div class="cs-container__inner">
-            <div class="cs-products-carousel<?= $componentClasses ?>" data-mobile-is-slider="<?= $isSliderMobile; ?>" data-view-mode=<?= $viewMode; ?> data-mage-init='{ "ccProductsCarousel": <?= $jsSettings ?> }'>
-                <div class="cs-products-carousel__carousel">
-                    <div class="cs-products-carousel__wrapper">
-                        <ul class="<?php if ($isList): ?>cs-products-list <?php endif; ?><?php if ($isSliderMobile == 'true'): ?>cs-products-list--carousel <?php endif; ?>cs-products-carousel__slides">
-                            <?php foreach ($viewModel->getProducts() as $product): ?>
-                                <li class="<?php if ($isList): ?>cs-products-list__item <?php endif; ?>cs-products-carousel__slide">
-                                    <div class="cs-products-carousel__product-tile">
-                                        <?= $viewModel->renderProductTile($product, null) ?>
-                                    </div>
-                                </li>
-                            <?php endforeach; ?>
-                        </ul>
-                    </div>
-
-                    <?php if (($viewMode == 'grid' or $isSliderMobile) && $block->getVar('product_carousel/navigation/show')): ?>
-                        <button class="cs-products-carousel__nav cs-products-carousel__nav--prev <?= $block->getVar('product_carousel/navigation/arrows/prev/additional_css_classes') ?>" type="button">
-                            <?= $this->getLayout()
-                                ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
-                                ->setIconUrl($block->getVar('product_carousel/navigation/arrows/prev/path'))
-                                ->setCssClass("cs-products-carousel__nav-icon")
-                                ->setInlined(true)
-                                ->toHtml();
-                            ?>
-                        </button>
-                        <button class="cs-products-carousel__nav cs-products-carousel__nav--next <?= $block->getVar('product_carousel/navigation/arrows/next/additional_css_classes') ?>" type="button">
-                            <?= $this->getLayout()
-                                ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
-                                ->setIconUrl($block->getVar('product_carousel/navigation/arrows/next/path'))
-                                ->setCssClass("cs-products-carousel__nav-icon")
-                                ->setInlined(true)
-                                ->toHtml();
-                            ?>
-                        </button>
-                    <?php endif; ?>
-
-                    <?php if (($viewMode == 'grid' or $isSliderMobile) && $block->getVar('product_carousel/pagination/show')): ?>
-                        <ul class="cs-products-carousel__pagination <?= $block->getVar('product_carousel/pagination/additional_css_classes') ?>"></ul>
-                    <?php endif; ?>
-
-                    <?php if (($viewMode == 'grid' or $isSliderMobile) && $block->getVar('product_carousel/scrollbar/show')): ?>
-                        <div class="cs-products-carousel__scrollbar">
-                            <div class="cs-products-carousel__scrollbar--drag"></div>
-                        </div>
-                    <?php endif; ?>
+<div class="cs-container cs-container--products-carousel<?= $visibility ? ' ' .$visibility : ''; ?>">
+    <div class="cs-container__inner">
+        <div class="cs-products-carousel<?= $componentClasses ?>" data-mobile-is-slider="<?= $isSliderMobile; ?>" data-view-mode=<?= $viewMode; ?> data-mage-init='{ "ccProductsCarousel": <?= $jsSettings ?> }'>
+            <div class="cs-products-carousel__carousel">
+                <div class="cs-products-carousel__wrapper">
+                    <ul class="<?php if ($isList): ?>cs-products-list <?php endif; ?><?php if ($isSliderMobile == 'true'): ?>cs-products-list--carousel <?php endif; ?>cs-products-carousel__slides">
+                        <?php foreach ($viewModel->getProducts() as $product): ?>
+                            <li class="<?php if ($isList): ?>cs-products-list__item <?php endif; ?>cs-products-carousel__slide">
+                                <div class="cs-products-carousel__product-tile">
+                                    <?= $viewModel->renderProductTile($product, null) ?>
+                                </div>
+                            </li>
+                        <?php endforeach; ?>
+                    </ul>
                 </div>
+
+                <?php if (($viewMode == 'grid' or $isSliderMobile) && $block->getVar('product_carousel/navigation/show')): ?>
+                    <button class="cs-products-carousel__nav cs-products-carousel__nav--prev <?= $block->getVar('product_carousel/navigation/arrows/prev/additional_css_classes') ?>" type="button">
+                        <?= $this->getLayout()
+                            ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                            ->setIconUrl($block->getVar('product_carousel/navigation/arrows/prev/path'))
+                            ->setCssClass("cs-products-carousel__nav-icon")
+                            ->setInlined(true)
+                            ->toHtml();
+                        ?>
+                    </button>
+                    <button class="cs-products-carousel__nav cs-products-carousel__nav--next <?= $block->getVar('product_carousel/navigation/arrows/next/additional_css_classes') ?>" type="button">
+                        <?= $this->getLayout()
+                            ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                            ->setIconUrl($block->getVar('product_carousel/navigation/arrows/next/path'))
+                            ->setCssClass("cs-products-carousel__nav-icon")
+                            ->setInlined(true)
+                            ->toHtml();
+                        ?>
+                    </button>
+                <?php endif; ?>
+
+                <?php if (($viewMode == 'grid' or $isSliderMobile) && $block->getVar('product_carousel/pagination/show')): ?>
+                    <ul class="cs-products-carousel__pagination <?= $block->getVar('product_carousel/pagination/additional_css_classes') ?>"></ul>
+                <?php endif; ?>
+
+                <?php if (($viewMode == 'grid' or $isSliderMobile) && $block->getVar('product_carousel/scrollbar/show')): ?>
+                    <div class="cs-products-carousel__scrollbar">
+                        <div class="cs-products-carousel__scrollbar--drag"></div>
+                    </div>
+                <?php endif; ?>
             </div>
         </div>
     </div>
